--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,26 @@
 bin/
 bin-int/
 tile_data/
-bgb/bgb.ini
-/Emulicious/Emulicious.ini
-/Emulicious/lib/libjinput-linux64.so
+
+bgb/*
+!bgb/bgb.html
+!bgb/bgb.exe
+!bgb/bgbtest.gb
+
+Emulicious/*
+!Emulicious/Highlighters
+!Emulicious/KeyPresets
+!Emulicious/MSX
+!Emulicious/Emulicious.exe
+!Emulicious/Emulicious.icl
+!Emulicious/Emulicious.jar
+!Emulicious/Expressions.txt
+!Emulicious/GameBoy.ports
+!Emulicious/GameBoyColor.ports
+!Emulicious/GameGear
+!Emulicious/License.txt
+!Emulicious/LICENSE-JInput.txt
+!Emulicious/MasterSystem.ports
+!Emulicious/MSX.ports
+!Emulicious/ReadMe.txt
+!Emulicious/WhatsNew.txt
